# postalcrawl

./: .pre-commit-config.yaml  README.md  pyproject.toml
data/v1/: .gitattributes  README.md
data/v1/240k/: full.parquet  targets.csv  values.csv
data/v1/24k/: full.parquet  targets.csv  values.csv
data/v1/2k/: cells.baran.json  cells.raha-baran.json  full.parquet  holoclean.repaired.csv  targets.csv  values.csv
data/v1/2m-named/: full.parquet  targets.csv  values.csv
data/v1/9m-noname/: full.parquet
osm-nominatim/: docker-compose.yml
postalcrawl/: extract.py  foobar.ipynb  models.py  preprocess.py  record.py  refine.py  stats.py  utils.py
postalcrawl/clean/: main.py
postalcrawl/evaluate/: eval_cleaning.ipynb  eval_dataset.ipynb  eval_repair.ipynb
postalcrawl/extract/: __init__.py  clean_address.py  extract.py  main.py  old.py  utils.py  warc_loaders.py
postalcrawl/legacy/: extract.py  main.py  process_url.py
postalcrawl/validate/: flatten.py  main.py  osm_validator.py  refine.py  response_model.py
tests/: conftest.py  test_bench.py  test_extract.py  test_ldjson_extract.py  test_old.py
tests/resources/: 10warc.paths  index.html  ldjson.1.json  response.1.html
